# Affine-Transforms

./: Cargo.toml  README.md
docs/: resources.md
src/: lib.rs  matrices.rs  matricies.rs  matrix_index_tests.rs  simd_vector4.rs  tests.rs  transforms.rs  vector3.rs  vector4.rs  vector_op_tests.rs  vectors.rs
src/unit_tests/: matrix_index_tests.rs  matrix_op_tests.rs  mod.rs  vector_op_tests.rs
